tests/sksl/errors/RTAdjustType.glsl
### Compilation failed:

error: 6: sk_RTAdjust must have type 'float4'
    float3 sk_RTAdjust;
    ^^^^^^^^^^^^^^^^^^^
error: 9: sk_RTAdjust must have type 'float4'
    half4 sk_RTAdjust;
    ^^^^^^^^^^^^^^^^^^
error: 12: sk_RTAdjust must have type 'float4'
    S sk_RTAdjust;
    ^^^^^^^^^^^^^^
error: 15: sk_RTAdjust must have type 'float4'
    int sk_RTAdjust;
    ^^^^^^^^^^^^^^^^
error: 18: sk_RTAdjust must have type 'float4'
    int sk_RTAdjust[2];
    ^^^^^^^^^^^^^^^^^^^
error: 21: sk_RTAdjust must have type 'float4'
    bool sk_RTAdjust;
    ^^^^^^^^^^^^^^^^^
error: 24: sk_RTAdjust must have type 'float4'
    float4 sk_RTAdjust[1];
    ^^^^^^^^^^^^^^^^^^^^^^
error: 27: sk_RTAdjust must have type 'float4'
float3 sk_RTAdjust;
^^^^^^^^^^^^^^^^^^
error: 28: sk_RTAdjust must have type 'float4'
half4 sk_RTAdjust;
^^^^^^^^^^^^^^^^^
error: 29: sk_RTAdjust must have type 'float4'
S sk_RTAdjust;
^^^^^^^^^^^^^
error: 30: sk_RTAdjust must have type 'float4'
int sk_RTAdjust;
^^^^^^^^^^^^^^^
error: 31: sk_RTAdjust must have type 'float4'
int sk_RTAdjust[2];
^^^^^^^^^^^^^^^^^^
error: 32: sk_RTAdjust must have type 'float4'
bool sk_RTAdjust;
^^^^^^^^^^^^^^^^
error: 33: sk_RTAdjust must have type 'float4'
float4 sk_RTAdjust[1];
^^^^^^^^^^^^^^^^^^^^^
14 errors
